# openagent-python-sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  README_EN.md  SECURITY.md  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: README.md  api-reference.en.md  api-reference.md  builtin-tools.en.md  builtin-tools.md  cli.en.md  cli.md  configuration.en.md  configuration.md  developer-guide.en.md  developer-guide.md  errors.en.md  errors.md  event-taxonomy.en.md  event-taxonomy.md  examples.en.md  examples.md  migration-0.2-to-0.3.md  migration-0.3-to-0.4.md  observability.en.md  observability.md  openagent-agent-builder.md  plugin-development.en.md  plugin-development.md  pptx-agent-cli.en.md  pptx-agent-cli.md  repository-layout.en.md  repository-layout.md  seams-and-extension-points.en.md  seams-and-extension-points.md
docs/research/: 2026-04-24-agent-sdk-comparison.md  2026-04-24-multi-agent-gap-analysis.md
docs/superpowers/plans/: 2026-04-17-debug-logging-rich.md  2026-04-19-tool-invocation-enhancement-plan.md  2026-04-21-diagnostics-plugin-plan.md  2026-04-22-error-handling-tier1-plan.md  2026-04-22-litellm-provider-integration.md  2026-04-22-loguru-optional-logging.md  2026-04-24-multi-agent-agent-router.md
docs/superpowers/specs/: 2026-04-16-openagents-sdk-kernel-completeness-design.md  2026-04-17-builtin-plugins-expansion-design.md  2026-04-17-plugin-system-cleanup-design.md  2026-04-18-plugin-interface-seam-consolidation-design.md  2026-04-19-tool-invocation-enhancement-design.md  2026-04-21-diagnostics-plugin-design.md  2026-04-22-error-handling-tier1-design.md  2026-04-22-litellm-provider-integration-design.md  2026-04-22-loguru-optional-logging-design.md  2026-04-24-multi-agent-design.md
examples/: README.md  __init__.py
examples/corecoder_agent/: .env.example  README.md  __init__.py  agent.json  run_demo.py  run_ml_demo.py
examples/corecoder_agent/app/: __init__.py  context.py  memory.py  pattern.py  prompts.py  runner.py
examples/corecoder_agent/example/: README.md  seed.py  shop_api.py  test_shop_api.py  todo_api.py
examples/corecoder_agent/ml_workspace/: Makefile  README.md  TASK.md
examples/corecoder_agent/workspace/: TASK.md  stats.py  test_stats.py
examples/llm_wiki_agent/: .env.example  README.md  agent.json  run_demo.py
examples/llm_wiki_agent/app/: plugins.py  protocols.py  store.py
examples/multi_agent/: README.md  agent_mock.json  agent_real.json  plugins.py  run_demo_mock.py  run_demo_real.py
examples/persistent_qa/: agent.json  deep_analysis.py  test_e2e.py
examples/pptx_generator/: README.md  agent.json  agent.no-tavily.json  cli.py  state.py
examples/pptx_generator/app/: catalog.py  events.py  plugins.py  slot_schemas.py
examples/pptx_generator/wizard/: _editors.py  _layout.py  _qa_scan.py  compile_qa.py  env.py  intent.py  outline.py  research.py  slides.py  theme.py
examples/production_coding_agent/: README.md  agent.json  run_demo.py
examples/production_coding_agent/app/: plugins.py
examples/quickstart/: .env.example  agent.json  run_demo.py
examples/research_analyst/: agent.json  run_demo.py
openagents/: __init__.py  decorators.py
openagents/cli/: _events.py  _fallback.py  main.py  validate_cmd.py
openagents/config/: __init__.py  loader.py  schema.py  validator.py
openagents/errors/: __init__.py  exceptions.py  suggestions.py
openagents/interfaces/: __init__.py  agent_router.py  capabilities.py  context.py  diagnostics.py  event_taxonomy.py  events.py  followup.py  memory.py  pattern.py  plugin.py  response_repair.py  run_context.py  runtime.py  session.py  skill.py  skills.py  tool.py  typed_config.py
openagents/llm/: __init__.py  base.py  registry.py
openagents/observability/: __init__.py  _loguru.py  _rich.py  config.py  errors.py  filters.py  logging.py  redact.py
openagents/plugins/: __init__.py  loader.py  registry.py
openagents/runtime/: runtime.py  stream_projection.py  sync.py
openagents/utils/: build.py  env_doctor.py  hotreload.py
skills/openagent-agent-builder/: SKILL.md
tests/: conftest.py
tests/fixtures/: __init__.py  custom_plugins.py  decorator_plugins.py  diagnostics_plugins.py  preflight_tools.py  runtime_plugins.py
tests/integration/: conftest.py  test_cli_smoke.py  test_context_assembly_token_budget.py  test_diagnostics_integration.py  test_durable_run_smoke.py  test_env_override.py  test_multi_agent.py  test_openagent_cli_runtime_integration.py  test_pptx_generator_example.py  test_production_coding_agent_example.py  test_research_analyst_example.py  test_run_stream_end_to_end.py  test_runtime_auto_configure.py  test_runtime_from_config_integration.py  test_sqlite_session_with_real_runtime.py  test_structured_output_e2e.py
tests/unit/: test_agent_builder_archetypes.py  test_agent_builder_builder.py  test_agent_builder_host_adapter.py  test_agent_builder_models.py  test_agent_builder_render.py  test_agent_builder_smoke.py  test_agent_router.py  test_anthropic_client.py  test_anthropic_stream_chunks.py  test_builtin_docstrings_are_three_section.py  test_builtin_patterns_additional.py  test_builtin_plugins_runtime.py  test_builtin_support_modules.py  test_builtin_tools_edge_cases.py  test_cli_completion.py  test_cli_dev.py  test_cli_doctor.py  test_cli_init.py  test_cli_new_builtins.py  test_cli_shared.py  test_compile_qa_wizard.py  test_concurrent_batch_executor.py  test_config_loader_env_var_hint.py  test_config_loader_validator.py  test_config_models.py  test_decorators.py  test_env_doctor.py  test_env_wizard.py  test_error_hint_format.py  test_errors.py  test_file_logging_event_bus.py  test_gen_event_doc_helper.py  test_hotreload_real_aiohttp_lifecycle.py  test_interfaces_and_exports.py  test_llm_base_additions.py  test_llm_response_cost.py  test_mcp_tool.py  test_near_match_helper.py  test_openai_compatible_client.py  test_outline_wizard.py  (+29 more)
(+312 files in other folders)
